[gd_scene load_steps=17 format=3 uid="uid://o7bv3h7sv70y"]

[ext_resource type="Script" uid="uid://b81xk14dpsmpi" path="res://scripts/enemies/enemy_drone.gd" id="1_xrf1e"]
[ext_resource type="Texture2D" uid="uid://dus568dvh23q" path="res://n_assets/n_scenes/elements/drone.png" id="2_xrf1e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qpob"]
size = Vector2(42, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5og5"]
atlas = ExtResource("2_xrf1e")
region = Rect2(0, 0, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxjgf"]
atlas = ExtResource("2_xrf1e")
region = Rect2(60, 0, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfcat"]
atlas = ExtResource("2_xrf1e")
region = Rect2(0, 100, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1ke"]
atlas = ExtResource("2_xrf1e")
region = Rect2(60, 100, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrf1e"]
atlas = ExtResource("2_xrf1e")
region = Rect2(0, 50, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqht6"]
atlas = ExtResource("2_xrf1e")
region = Rect2(60, 50, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_imsfi"]
atlas = ExtResource("2_xrf1e")
region = Rect2(120, 50, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8u5i"]
atlas = ExtResource("2_xrf1e")
region = Rect2(0, 200, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_agrjm"]
atlas = ExtResource("2_xrf1e")
region = Rect2(60, 200, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xn7l"]
atlas = ExtResource("2_xrf1e")
region = Rect2(0, 150, 60, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipd0o"]
atlas = ExtResource("2_xrf1e")
region = Rect2(60, 150, 60, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_jsfuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5og5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxjgf")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfcat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1ke")
}],
"loop": true,
"name": &"follow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrf1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqht6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imsfi")
}],
"loop": true,
"name": &"search",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8u5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agrjm")
}],
"loop": false,
"name": &"shake",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xn7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipd0o")
}],
"loop": true,
"name": &"target",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xrf1e"]
radius = 268.02985

[node name="drone" type="Node2D"]
script = ExtResource("1_xrf1e")

[node name="damage_area" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="damage_area"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_6qpob")
debug_color = Color(0.972549, 0, 0.3137255, 0.41960785)

[node name="anime" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jsfuh")
animation = &"shake"
autoplay = "fly"

[node name="detect_area" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="collision_detect" type="CollisionShape2D" parent="detect_area"]
shape = SubResource("CircleShape2D_xrf1e")
debug_color = Color(0.16094005, 0.6192763, 0.5128252, 0.41960785)

[node name="attack_timer" type="Timer" parent="."]

[connection signal="area_entered" from="damage_area" to="." method="_on_damage_area_area_entered"]
[connection signal="area_entered" from="detect_area" to="." method="_on_detect_area_area_entered"]
